Add request and response of dtos